objects/project_cloud__Meeting__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will allow you to relate an Account to a Meeting.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Action_Status__c</fullName>
        <formula>IF(
ISBLANK(project_cloud__Last_Open_Action__c),
&apos;Complete&apos;,
IF(project_cloud__Last_Open_Action__c &gt;= TODAY(), &apos;In Progress&apos;, &apos;Late&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will allow you to relate a Case to a Meeting.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Duration__c</fullName>
        <inlineHelpText>This field will document the total duration (in minutes) that the meeting should last.</inlineHelpText>
        <label>Duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Externally_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to grant sites access to this meeting.</inlineHelpText>
        <label>Externally Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you would like to reference this Meeting as a template.</inlineHelpText>
        <label>Set as Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Last_Open_Action__c</fullName>
        <label>Last Open Action</label>
        <summarizedField>project_cloud__Agenda_Item__c.project_cloud__Last_Open_Action__c</summarizedField>
        <summaryFilterItems>
            <field>project_cloud__Agenda_Item__c.project_cloud__Last_Open_Action__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>project_cloud__Agenda_Item__c.project_cloud__Meeting__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Meeting_Attendees__c</fullName>
        <description>This number represents the total number of invitees in a meeting, filtered to only include those who are marked as attended.</description>
        <inlineHelpText>This number represents the total number of invitees in a meeting, filtered to only include those who are marked as attended.</inlineHelpText>
        <label>Meeting Attendees</label>
        <summaryFilterItems>
            <field>project_cloud__Meeting_Attendee__c.project_cloud__IsAttended__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>project_cloud__Meeting_Attendee__c.project_cloud__Meeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Objective__c</fullName>
        <inlineHelpText>This area will allow users to specify the summarized objective of the Meeting.</inlineHelpText>
        <label>Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will allow you to relate an Opportunity to a Meeting.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will allow you to relate a Project to a Meeting.</inlineHelpText>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__RelatedTo__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field will show users what object this meeting is related too.</inlineHelpText>
        <label>System - Related To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Start__c</fullName>
        <inlineHelpText>This field will define the date the Meeting will take place.</inlineHelpText>
        <label>Meeting Start</label>
        <type>DateTime</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>project_cloud__All_Templates</fullName>
        <columns>NAME</columns>
        <columns>project_cloud__Duration__c</columns>
        <columns>project_cloud__Objective__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>project_cloud__IsTemplate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Templates</label>
    </listViews>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <recordTypes>
        <fullName>project_cloud__Customer_Success</fullName>
        <active>true</active>
        <label>Customer Success</label>
    </recordTypes>
    <recordTypes>
        <fullName>project_cloud__Finance</fullName>
        <active>true</active>
        <label>Finance</label>
    </recordTypes>
    <recordTypes>
        <fullName>project_cloud__HR</fullName>
        <active>true</active>
        <label>HR</label>
    </recordTypes>
    <recordTypes>
        <fullName>project_cloud__IT</fullName>
        <active>true</active>
        <label>IT</label>
    </recordTypes>
    <recordTypes>
        <fullName>project_cloud__Marketing</fullName>
        <active>true</active>
        <label>Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>project_cloud__Professional_Services</fullName>
        <active>true</active>
        <label>Professional Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>project_cloud__Sales</fullName>
        <active>true</active>
        <label>Sales</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>project_cloud__Guest__c</fullName>
        <label>GuestUser</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>project_cloud__Manage__c</fullName>
        <label>Manage</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>project_cloud__View__c</fullName>
        <label>View</label>
    </sharingReasons>
</CustomObject>